fix: css cleanup and comments

--- a/src/_patterns/04-pages/bolt-sandbox/bolt-form.twig
+++ b/src/_patterns/04-pages/bolt-sandbox/bolt-form.twig
@@ -23,11 +23,6 @@
                 <label class="c-bolt-floating-label" for="invalid-input">
                   Email Input
                 </label>
-                <div class="c-bolt-input-message c-bolt-input-message--invalid">
-                  <p class="c-bolt-text c-bolt-text--xsmall">
-                    Unfortunately, you are doing it wrong.
-                  </p>
-                </div>
                 <div class="c-bolt-input-icons">
                   <ul class="o-bolt-inline-list o-bolt-inline-list--xsmall">
                     <li class="o-bolt-inline-list__item">
@@ -39,6 +34,9 @@
                       </div>
                     </li>
                   </ul>
+                </div>
+                <div class="c-bolt-input-message c-bolt-input-message--invalid">
+                  Unfortunately, you are doing it wrong.
                 </div>
               </div>
               <div class="c-bolt-input-list__item">
@@ -52,9 +50,6 @@
                 <label class="c-bolt-floating-label" for="password-input">
                   Password
                 </label>
-                <div class="c-bolt-strength-indicator">
-                  <div class="c-bolt-strength-indicator__meter c-bolt-strength-indicator__meter--25"></div>
-                </div>
                 <div class="c-bolt-input-icons">
                   <ul class="o-bolt-inline-list o-bolt-inline-list--xsmall">
                     <li class="o-bolt-inline-list__item">
@@ -67,10 +62,14 @@
                     </li>
                   </ul>
                 </div>
+                <div class="c-bolt-strength-indicator">
+                  <div class="c-bolt-strength-indicator__meter c-bolt-strength-indicator__meter--25"></div>
+                  <div class="c-bolt-strength-indicator__text">
+                    Your password is weak sauce.
+                  </div>
+                </div>
                 <div class="c-bolt-input-message c-bolt-input-message--invalid">
-                  <p class="c-bolt-text c-bolt-text--xsmall">
-                    Please use at least 1 number, 1 capital letter, and 1 special character.
-                  </p>
+                  Please use at least 1 number, 1 capital letter, and 1 special character.
                 </div>
               </div>
             </div>
