fix: disabled and placeholder styles

--- a/src/_patterns/04-pages/bolt-sandbox/bolt-form.twig
+++ b/src/_patterns/04-pages/bolt-sandbox/bolt-form.twig
@@ -3,8 +3,8 @@
 {% block main_content %}
   {% grid %}
     {% cell "u-bolt-width-1/1 u-bolt-width-6/12@small" %}
-      <div class="c-bolt-band c-bolt-band--medium">
-        <form action="#" method="post" class="c-bolt-form t-bolt-xlight">
+      <div class="c-bolt-band c-bolt-band--medium t-bolt-xlight">
+        <form action="#" method="post" class="c-bolt-form">
           <fieldset class="c-bolt-fieldset">
             <legend class="c-bolt-legend">
               <h2 class="c-bolt-headline c-bolt-headline--xlarge">
