fix: remove rem unit from imported spacing unit values; remove non-existant logo from placeholder header

--- a/src/_patterns/02-components/bolt-page-header/src/page-header.twig
+++ b/src/_patterns/02-components/bolt-page-header/src/page-header.twig
@@ -74,7 +74,8 @@
       </div>
       <div class="c-page-header__inner">
         <div class="c-page-header__image">
-          <a class="c-site-logo qa-site-logo" href="/" title="Home"> <img class="c-site-logo__image" src="/themes/custom/pegawww_theme/images/pega-logo.svg" alt="Home" /> </a>
+          <span>Logo Placeholder</span>
+          {# <a class="c-site-logo qa-site-logo" href="/" title="Home"> <img class="c-site-logo__image" src="/themes/custom/pegawww_theme/images/pega-logo.svg" alt="Home" /> </a> #}
         </div>
         <div class="c-page-header__body js-mega-nav">
           <nav class="c-mega-nav js-mega-nav">
