--- a/src/_patterns/04-pages/bolt-sandbox/bolt-form.twig
+++ b/src/_patterns/04-pages/bolt-sandbox/bolt-form.twig
@@ -17,6 +17,18 @@
                 <label class="c-bolt-floating-label" for="valid-input">
                   Text Input
                 </label>
+                <div class="c-bolt-input-icons">
+                  <ul class="o-bolt-inline-list o-bolt-inline-list--xsmall">
+                    <li class="o-bolt-inline-list__item">
+                      <div class="c-bolt-input-icon c-bolt-input-icon--invalid">
+                        {% include "@bolt/icon.twig" with {
+                          "name": "warning",
+                          "size": "medium"
+                        } only %}
+                      </div>
+                    </li>
+                  </ul>
+                </div>
               </div>
               <div class="c-bolt-input-list__item">
                 <input class="c-bolt-input is-touched is-filled" type="email" name="invalid-input" id="invalid-input" placeholder="Enter email address" value="Invalid" required invalid />
@@ -26,7 +38,7 @@
                 <div class="c-bolt-input-icons">
                   <ul class="o-bolt-inline-list o-bolt-inline-list--xsmall">
                     <li class="o-bolt-inline-list__item">
-                      <div class="c-bolt-input-icon">
+                      <div class="c-bolt-input-icon c-bolt-input-icon--invalid">
                         {% include "@bolt/icon.twig" with {
                           "name": "warning",
                           "size": "medium"
@@ -44,6 +56,18 @@
                 <label class="c-bolt-floating-label" for="disabled-input">
                   Text Input
                 </label>
+                <div class="c-bolt-input-icons">
+                  <ul class="o-bolt-inline-list o-bolt-inline-list--xsmall">
+                    <li class="o-bolt-inline-list__item">
+                      <div class="c-bolt-input-icon">
+                        {% include "@bolt/icon.twig" with {
+                          "name": "lock",
+                          "size": "medium"
+                        } only %}
+                      </div>
+                    </li>
+                  </ul>
+                </div>
               </div>
               <div class="c-bolt-input-list__item">
                 <input class="c-bolt-input is-touched is-filled" type="password" name="password-input" id="password-input" placeholder="Enter password" value="12345" required />
@@ -53,7 +77,18 @@
                 <div class="c-bolt-input-icons">
                   <ul class="o-bolt-inline-list o-bolt-inline-list--xsmall">
                     <li class="o-bolt-inline-list__item">
-                      <a class="c-bolt-input-icon c-bolt-input-icon--link" title="Show password" href="javascript:">
+                      <div class="c-bolt-input-icon c-bolt-input-icon--invalid">
+                        {% include "@bolt/icon.twig" with {
+                          "name": "warning",
+                          "size": "medium"
+                        } only %}
+                      </div>
+                    </li>
+                    <li class="o-bolt-inline-list__item">
+                      <a class="c-bolt-input-icon c-bolt-input-icon--link" title="Show or hide password" href="javascript:">
+                        <span class="c-bolt-input-icon__text">
+                          Show or hide password
+                        </span>
                         {% include "@bolt/icon.twig" with {
                           "name": "eye-off",
                           "size": "medium"
