--- a/src/styles/bolt.scss
+++ b/src/styles/bolt.scss
@@ -282,29 +282,17 @@ select {
 
 
 
+// Checkbox and Radio Inputs
+$bolt-inline-label-transition: $bolt-transition;
+$bolt-inline-label-input-color: bolt-color(indigo, light);
+$bolt-inline-label-input-border-color: rgba(bolt-color(indigo, light), 0.25); // TODO: [Mai] This is the theme link color at 25%
+$bolt-inline-label-input-border-style: $bolt-border-style;
+$bolt-inline-label-input-border-width: $bolt-border-width;
+
 // Data Inputs
 $bolt-floating-label-text-color: bolt-color(indigo, light);
 $bolt-floating-label-text-indent: bolt-spacing(small);
 $bolt-floating-label-transition: $bolt-transition;
-
-.c-bolt-floating-label {
-  @include bolt-font-size(xsmall);
-
-  position: absolute;
-  top: 0.45rem;
-  left: $bolt-floating-label-text-indent;
-  max-width: calc(100% - #{$bolt-floating-label-text-indent * 2});
-  overflow: hidden;
-  color: $bolt-floating-label-text-color;
-  line-height: 1;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  opacity: 0;
-  transform: translate3d(0, -15%, 0) scale(0.8);
-  transform-origin: 0 100%;
-  transition: all $bolt-floating-label-transition;
-}
-
 
 $bolt-input-text-color: bolt-color(gray, xdark); // TODO: [Mai] This is the theme text color
 $bolt-input-text-color--invalid: bolt-color(error); // TODO: [Mai] This is the theme error color
@@ -426,15 +414,23 @@ $bolt-input-transition: $bolt-transition;
   }
 }
 
+.c-bolt-floating-label {
+  @include bolt-font-size(xsmall);
 
-
-
-// Checkbox and Radio Inputs
-$bolt-inline-label-transition: $bolt-transition;
-$bolt-inline-label-input-color: bolt-color(indigo, light);
-$bolt-inline-label-input-border-color: rgba(bolt-color(indigo, light), 0.25); // TODO: [Mai] This is the theme link color at 25%
-$bolt-inline-label-input-border-style: $bolt-border-style;
-$bolt-inline-label-input-border-width: $bolt-border-width;
+  position: absolute;
+  top: 0.45rem;
+  left: $bolt-floating-label-text-indent;
+  max-width: calc(100% - #{$bolt-floating-label-text-indent * 2});
+  overflow: hidden;
+  color: $bolt-floating-label-text-color;
+  line-height: 1;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  opacity: 0;
+  transform: translate3d(0, -15%, 0) scale(0.8);
+  transform-origin: 0 100%;
+  transition: all $bolt-floating-label-transition;
+}
 
 .c-bolt-inline-label {
   @include bolt-padding-left(medium);
@@ -509,6 +505,30 @@ $bolt-inline-label-input-border-width: $bolt-border-width;
 
 .c-bolt-input-icon--link {
   pointer-events: auto;
+}
+
+.c-bolt-input-icon--invalid {
+  display: none; // TODO: [Mai] Remove this if invalid icons are dynamically generated through javascript.
+}
+
+.c-bolt-input.is-invalid ~ .c-bolt-input-icons,
+.c-bolt-input.is-touched:invalid ~ .c-bolt-input-icons {
+  .c-bolt-input-icon--invalid {
+    display: block; // TODO: [Mai] Remove this if invalid icons are dynamically generated through javascript.
+  }
+}
+
+.c-bolt-input.is-disabled ~ .c-bolt-input-icons,
+.c-bolt-input:disabled ~ .c-bolt-input-icons {
+  background-color: $bolt-input-background-color--disabled;
+
+  &:before {
+    background: linear-gradient(to left, $bolt-input-background-color--disabled, transparent);
+  }
+}
+
+.c-bolt-input-icon__text {
+  @include bolt-visuallyhidden;
 }
 
 
