feature: repurpose existing @bolt/bolt package to house pre-compiled JS and CSS builds of everything being currently shipped in Bolt. Update Pattern Lab and gulp tasks to be wired up to use the re-located assets

--- a/src/_meta/_01-foot.twig
+++ b/src/_meta/_01-foot.twig
@@ -3,6 +3,6 @@
   {{ patternLabFoot | raw }}
 
     {# <script src="/scripts/bolt-app.min.js" async type="module"></script> #}
-    <script src="/scripts/bolt-app.min.js" async></script>
+    <script src="/scripts/bolt.min.js" async></script>
   </body>
 </html>
