styles: checkbox and radio update

--- a/src/_patterns/04-pages/bolt-sandbox/bolt-form.twig
+++ b/src/_patterns/04-pages/bolt-sandbox/bolt-form.twig
@@ -129,6 +129,12 @@
                 </label>
               </div>
               <div class="c-bolt-input-list__item">
+                <input class="c-bolt-input" type="tel" name="tel-input" id="tel-input" placeholder="Enter a telephone number" minlength="9" maxlength="14" required />
+                <label class="c-bolt-floating-label" for="tel-input">
+                  Telephone
+                </label>
+              </div>
+              <div class="c-bolt-input-list__item">
                 <input class="c-bolt-input" type="search" name="search-input" id="search-input" placeholder="Enter text to search" required />
                 <label class="c-bolt-floating-label" for="search-input">
                   Search
