--- a/src/styles/bolt.scss
+++ b/src/styles/bolt.scss
@@ -367,11 +367,6 @@ $bolt-input-transition: $bolt-transition;
   &:focus {
     padding-top: calc(#{bolt-v-spacing(small)} + 0.45rem);
     padding-bottom: calc(#{bolt-v-spacing(small)} - 0.45rem);
-
-    & ~ .c-bolt-floating-label {
-      opacity: 1;
-      transform: translate3d(0, 0, 0) scale(1);
-    }
   }
 
   &:focus,
@@ -389,29 +384,6 @@ $bolt-input-transition: $bolt-transition;
   @include bolt-visuallyhidden;
 
   display: inline;
-
-  &:focus ~ .c-bolt-inline-label,
-  &:hover ~ .c-bolt-inline-label {
-    &:before {
-      box-shadow: $bolt-input-box-shadow--focus;
-    }
-  }
-
-  &:focus ~ .c-bolt-inline-label {
-    &:before {
-      border-color: $bolt-input-border-color--focus;
-    }
-  }
-
-  &:checked ~ .c-bolt-inline-label {
-    &:before {
-      border-color: $bolt-input-border-color--focus;
-    }
-
-    &:after {
-      content: '';
-    }
-  }
 }
 
 .c-bolt-floating-label {
@@ -430,6 +402,14 @@ $bolt-input-transition: $bolt-transition;
   transform: translate3d(0, -15%, 0) scale(0.8);
   transform-origin: 0 100%;
   transition: all $bolt-floating-label-transition;
+}
+
+.c-bolt-input.is-filled,
+.c-bolt-input:focus {
+  & ~ .c-bolt-floating-label {
+    opacity: 1;
+    transform: translate3d(0, 0, 0) scale(1);
+  }
 }
 
 .c-bolt-inline-label {
@@ -461,7 +441,10 @@ $bolt-input-transition: $bolt-transition;
     left: 3px;
     width: calc(1rem - 6px);
     height: calc(1rem - 6px);
+    content: '';
     background-color: $bolt-inline-label-input-color;
+    opacity: 0;
+    transform: scale(0.1);
   }
 }
 
@@ -476,6 +459,33 @@ $bolt-input-transition: $bolt-transition;
   &:before,
   &:after {
     border-radius: 1rem;
+  }
+}
+
+.c-bolt-input--checkbox,
+.c-bolt-input--radio {
+  &:focus ~ .c-bolt-inline-label,
+  &:hover ~ .c-bolt-inline-label {
+    &:before {
+      box-shadow: $bolt-input-box-shadow--focus;
+    }
+  }
+
+  &:focus ~ .c-bolt-inline-label {
+    &:before {
+      border-color: $bolt-input-border-color--focus;
+    }
+  }
+
+  &:checked ~ .c-bolt-inline-label {
+    &:before {
+      border-color: $bolt-input-border-color--focus;
+    }
+
+    &:after {
+      opacity: 1;
+      transform: scale(1);
+    }
   }
 }
 
