--- a/src/_patterns/02-components/bolt-headline/src/_typography.twig
+++ b/src/_patterns/02-components/bolt-headline/src/_typography.twig
@@ -37,7 +37,7 @@
 {% set type = type in types ? type : _defaultType %}
 {% set size = size | default(_defaultSize) %}
 {% set transform = transform | default("") %}
-{% set align = align | default(_defaultAlignment) %}
+{% set align = align in alignments ? align : _defaultAlignment %}
 
 {% set prefix = "c-bolt-" %}
 {% set baseClass = prefix ~ type %}
@@ -52,7 +52,7 @@
   baseClass,
   quoted ? baseClass ~ "--" ~ "quoted" : "",
   weight in weights ? baseClass ~ "--" ~ weight : "",
-  align in alignments ? baseClass ~ "--" ~ align : "",
+  align ? baseClass ~ "--" ~ align : "",
   style in styles and type == "text" ? baseClass ~ "--" ~ style : "",
   size in sizes and type != "eyebrow" ? baseClass ~ "--" ~ size : "",
   transform in transformProps and transform != "" ? baseClass ~ "--" ~ transform : "",
