fix: update blockquote border radius to use a % instead of static length value.

--- a/src/_patterns/02-components/bolt-blockquote/src/blockquote.scss
+++ b/src/_patterns/02-components/bolt-blockquote/src/blockquote.scss
@@ -134,7 +134,7 @@ bolt-blockquote {
   border-width: $bolt-blockquote-image-border-width;
   border-style: $bolt-blockquote-image-border-style;
   border-color: $bolt-blockquote-image-border-color;
-  border-radius: 100em;
+  border-radius: 50%;
   overflow: hidden;
 }
 
