--- a/src/_patterns/02-components/05-bolt-background-shapes/src/background-shapes.scss
+++ b/src/_patterns/02-components/05-bolt-background-shapes/src/background-shapes.scss
@@ -11,19 +11,19 @@
     width: 900px;
   }
 
+  &__svg {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+  }
+
   &__shape {
     // To support IE, use the "bottom padding" hack to position svgs within the grid.
     // See https://css-tricks.com/scale-svg/#article-header-id-10
     position: relative;
     height: 0;
     padding-bottom: 100%;
-
-    svg {
-      display: block;
-      position: absolute;
-      width: 100%;
-      height: 100%;
-    }
 
     &--orange {
       .c-bolt-background-shapes__svg-primary {
