--- a/src/_patterns/02-components/bolt-headline/src/_typography.twig
+++ b/src/_patterns/02-components/bolt-headline/src/_typography.twig
@@ -24,7 +24,7 @@
 {% set _defaultStyle = "normal" %}
 {% set _defaultType = "text" %}
 {% set _defaultSize = "medium" %}
-{% set _defaultAlignment = "left" %}
+{% set _defaultAlignment = "" %}
 
 
 {% if tags != "any" %}
@@ -52,7 +52,7 @@
   baseClass,
   quoted ? baseClass ~ "--" ~ "quoted" : "",
   weight in weights ? baseClass ~ "--" ~ weight : "",
-  align ? baseClass ~ "--" ~ align : "",
+  align and align != "" ? baseClass ~ "--" ~ align : "",
   style in styles and type == "text" ? baseClass ~ "--" ~ style : "",
   size in sizes and type != "eyebrow" ? baseClass ~ "--" ~ size : "",
   transform in transformProps and transform != "" ? baseClass ~ "--" ~ transform : "",
