chore: tooltip setup

--- a/src/_patterns/01-core/05-objects/bolt-ui-list-object/src/ui-list.scss
+++ b/src/_patterns/01-core/05-objects/bolt-ui-list-object/src/ui-list.scss
@@ -21,12 +21,14 @@ $bolt-ui-list-border-style: solid !default;
 $bolt-ui-list-border-color: var(--bolt-theme-border, currentColor);
 
 .o-bolt-ui-list {
+  display: block;
   margin: 0;
   padding: 0;
   list-style: none;
 }
 
 .o-bolt-ui-list__item {
+  display: block;
   position: relative;
 
   &:after {
