--- a/src/_patterns/01-core/05-objects/bolt-ratio-object/src/ratio.scss
+++ b/src/_patterns/01-core/05-objects/bolt-ratio-object/src/ratio.scss
@@ -2,28 +2,32 @@
    #BOLT RATIO OBJECT
    ========================================================================== */
 
+bolt-ratio {
+  display: inline-block;
+  position: relative;
+  width: 100%;
 
-bolt-ratio,
-:host {
   --aspect-ratio-width: 1;
   --aspect-ratio-height: 1;
-  position: relative;
-  display: inline-block;
-  width: 100%;
 
   @supports (--custom:property) {
     padding-top: calc( var(--aspect-ratio-height, 1) / var(--aspect-ratio-width, 1) * 100%);
   }
-
-  > * {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    min-width: 100%; // workaround for content w/ hard-coded height & width 
-    min-height: 100%; // workaround for content w/ hard-coded height & width
-  }
 }
 
 
+/**
+  * 1. Fallback selector if JS isn't disabled, but hasn't kicked in yet.
+  * 2. Fallback selector for browsers not supporting ::slotted(*) selector
+  */
+bolt-ratio > *, /* [1] */
+.o-bolt-ratio__inner, /* [2] */
+.o-bolt-ratio__inner ::slotted(*) {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  min-width: 100%; // workaround for content w/ hard-coded height & width
+  min-height: 100%; // workaround for content w/ hard-coded height & width
+}
