--- a/src/_patterns/02-components/bolt-figure/src/_figure.scss
+++ b/src/_patterns/02-components/bolt-figure/src/_figure.scss
@@ -9,3 +9,12 @@
 /* ------------------------------------ *\
    Figure
 \* ------------------------------------ */
+
+/**
+  * 1. Change the default custom element layout from inline to block to fix an IE 11 layout
+  *  issue with the vertical alignment of the flag object's `figure` not being vertically
+  *  aligned as expected (internally the flag object uses a nested figure)
+  */
+bolt-figure {
+  display: block; /* [1] */
+}
