chore: add the figure component's CSS to be included in Bolt's components-all Sass build + include in package.json as a dependency

--- a/src/_patterns/02-components/components-all/components-all.scss
+++ b/src/_patterns/02-components/components-all/components-all.scss
@@ -15,6 +15,7 @@
 @import '@bolt/components-color-swatch';
 @import '@bolt/components-device-viewer';
 // @import '@bolt/components-video';
+@import '@bolt/components-figure';
 @import '@bolt/components-headline';
 @import '@bolt/components-image';
 @import '@bolt/components-icon';
