--- a/src/_patterns/02-components/bolt-card/src/card.scss
+++ b/src/_patterns/02-components/bolt-card/src/card.scss
@@ -35,7 +35,8 @@ $bolt-card-translate--active: $bolt-translate-raised--medium;
 
 bolt-card {
   display: flex;
-  flex-grow: 1; //If used in a flex box container, grow to fill available space.
+  flex-grow: 1; // If used in a flex box container, grow to fill available space.
+  height: 100%; // Alternative, try to fill vertical space if available, even if parent's isn't display: flex;
 }
 
 .c-bolt-card {
