--- a/src/_patterns/02-components/bolt-device-viewer/src/_device-viewer.scss
+++ b/src/_patterns/02-components/bolt-device-viewer/src/_device-viewer.scss
@@ -116,51 +116,51 @@ $magnifier-size: 350px;
   100% { transform: scale(1); }
 }
 
-	top: 0%;
-	left: 0%;
-	width: 100%;
-	height: 100%;
-	opacity: 1;
-	transition: all .2s linear;
-	z-index: 1000;
-	position: absolute;
-	pointer-events: none;
-	color: bolt-color(white);
-
-	&:before {
-		background-color: rgba(bolt-color(black), .3);
-		top: 50%;
 .c-bolt-image-zoom__overlay {
+  position: absolute;
+  z-index: 1000;
+  top: 0%;
+  left: 0%;
+  width: 100%;
+  height: 100%;
+  opacity: 1;
+  transition: all 0.2s linear;
+  pointer-events: none;
+  color: bolt-color(white);
+
+  &:before {
+    display: block;
+    position: absolute;
+    z-index: -1;
+    background-color: rgba(bolt-color(black), 0.3);
+    top: 50%;
     left: 50%;
     width: 200%;
     height: 200%;
     content: '';
-    display: block;
     opacity: 1;
-    transition: all .2s linear;
-    z-index: -1;
-    position: absolute;
+    transition: all 0.2s linear;
     pointer-events: none;
     transform: translate3d(-50%, -50%, 0);
-	}
+  }
 }
 
 
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate3d(-50%, -50%, 0);
-	transition: all .1s ease;
-	animation: pulse 3s infinite;
-	line-height: 1;
-	pointer-events: none;
 .c-bolt-image-zoom__overlay-icon {
+  --bolt-theme-icon-background-opacity: 0.5;
+  --bolt-theme-icon-background-color: bolt-color(black);
 
-	box-shadow: 0 2px 5px 10px rgba(21,22,25,.025);
-	border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate3d(-50%, -50%, 0);
+  transition: all 0.1s ease;
+  animation: pulse 3s infinite;
+  line-height: 1;
+  pointer-events: none;
 
-	--bolt-theme-icon-background-opacity: .5;
-	--bolt-theme-icon-background-color: bolt-color(black);
+  box-shadow: 0 2px 5px 10px rgba(21, 22, 25, 0.025);
+  border-radius: 50%;
 
   .is-mouse-leaving & {
     animation: pulseFadeIn 300ms linear;
